--- a/OrderService/src/main/resources/application.yaml
+++ b/OrderService/src/main/resources/application.yaml
@@ -13,5 +13,15 @@ spring:
       ddl-auto: update
   application:
     name: ORDER-SERVICE
+    config:
+      import: configserver:http://localhost:9296
 
+  #eureka:
+    #instance:
+    # prefer-ip-address: true
+    #client:
+    #fetch-registry: true
+    #register-with-eureka: true
+      #service-url:
+      #defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka}
 
