--- a/CloudGateway/src/main/resources/application.yml
+++ b/CloudGateway/src/main/resources/application.yml
@@ -12,14 +12,29 @@ spring:
           uri: lb://ORDER-SERVICE
           predicates:
             - Path=/order/**
+          filters:
+            - name: CircuitBreaker
+              args:
+                name: ORDER-SERVICE
+                fallbackuri: forward:/orderServiceFallBack
         - id: PAYMENT-SERVICE
           uri: lb://PAYMENT-SERVICE
           predicates:
             - Path=/payment/**
+          filters:
+            - name: CircuitBreaker
+              args:
+                name: PAYMENT-SERVICE
+                fallbackuri: forward:/paymentServiceFallBack
         - id: PRODUCT-SERVICE
             uri: lb://PRODUCT-SERVICE
             predicates:
               - Path=/product/**
+            filters:
+              - name: CircuitBreaker
+                args:
+                  name: PRODUCT-SERVICE
+                  fallbackuri: forward:/productServiceFallBack
 
 
 
