--- a/OrderService/src/main/resources/application.yaml
+++ b/OrderService/src/main/resources/application.yaml
@@ -16,6 +16,17 @@ spring:
     config:
       import: configserver:http://localhost:9296
 
+resilience4j:
+  circuitbreaker:
+    instances:
+      external:
+        event-consumer-buffer-size: 10
+        failure-rate-threshold: 50
+        minimum-number-of-calls: 5
+        automatic-transition-from-open-to-half-open-enabled: true
+        wait-duration-in-open-state: 5s
+        permitted-number-of-calls-in-half-open-state: 3
+        sliding-window-size: 10
   #eureka:
     #instance:
     # prefer-ip-address: true
