rate limiter added in gateway service

--- a/CloudGateway/src/main/resources/application.yml
+++ b/CloudGateway/src/main/resources/application.yml
@@ -17,6 +17,10 @@ spring:
               args:
                 name: ORDER-SERVICE
                 fallbackuri: forward:/orderServiceFallBack
+            - name: RequestRateLimiter
+              args:
+                redis-rate-limiter.replenishRate: 1
+                regis-rate-limiter.burstCapacity: 1
         - id: PAYMENT-SERVICE
           uri: lb://PAYMENT-SERVICE
           predicates:
@@ -26,6 +30,10 @@ spring:
               args:
                 name: PAYMENT-SERVICE
                 fallbackuri: forward:/paymentServiceFallBack
+            - name: RequestRateLimiter
+                args:
+                  redis-rate-limiter.replenishRate: 1
+                  regis-rate-limiter.burstCapacity: 1
         - id: PRODUCT-SERVICE
             uri: lb://PRODUCT-SERVICE
             predicates:
@@ -35,6 +43,10 @@ spring:
                 args:
                   name: PRODUCT-SERVICE
                   fallbackuri: forward:/productServiceFallBack
+              - name: RequestRateLimiter
+                  args:
+                    redis-rate-limiter.replenishRate: 1
+                    regis-rate-limiter.burstCapacity: 1
 
 
 
