--- a/OrderService/src/main/resources/application.yaml
+++ b/OrderService/src/main/resources/application.yaml
@@ -44,12 +44,8 @@ resilience4j:
         permitted-number-of-calls-in-half-open-state: 3
         sliding-window-size: 10
         slidingWindowType: COUNT_BASED
-  #eureka:
-    #instance:
-    # prefer-ip-address: true
-    #client:
-    #fetch-registry: true
-    #register-with-eureka: true
-      #service-url:
-      #defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka}
+
+microservices:
+  product: http://product-service-svc/product
+  payment: http://product-service-svc/payment
 
