--- a/ConfigServer/pom.xml
+++ b/ConfigServer/pom.xml
@@ -51,6 +51,21 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+				<groupId>com.google.cloud.tool</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+
+				<configuration>
+					<from>
+						<image>openjdk:11</image>
+					</from>
+					<to>
+						<image>${REPO_URL}/configserver</image>
+						<tags>${project.version}</tags>
+					</to>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
